# dc_plus

./: build.py  main.py  pyproject.toml
dc_plus/: alias.py  constant.py  metadata.py  model_base.py
metify/: __init__.py  _meta.py  _speedups.pyx  base.py  config.py  meta.py  meta_field.py  metadata.py  model.py  types.py
metify/core/: const.py  field_cls.py  meta_cls_utils.py  types.py
metify/utils/: aliases.py  json_adapters.py
scripts/: release-wheel.py
